# tauri-egui-basic

./: Cargo.toml  tauri.conf.json
src/: main.rs
